agregando una clase al elemento <a> y añadiendo nuevo documento de estilo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </main>
 
     <footer>
-        <p>Todos los derechos reservados <a href="">@Engelscarcamo</a></p>
+        <p>Todos los derechos reservados <a class="headerTag" href="">@Engelscarcamo</a></p>
     </footer>
 </body>
 
